--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/agregar.documentos/agregar.documentos.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/agregar.documentos/agregar.documentos.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <!-- Datos Generales de los Usuarios -->
   <div class="row">
       <div class="col-xs-12 col-sm-7 col-md-7">
