--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/traslado.comunicacion/traslado.comunicacion.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/traslado.comunicacion/traslado.comunicacion.component.css
@@ -13,6 +13,9 @@
 .container {
   font-family: -system-ui
 }
+.container-fluid {
+  font-family: -system-ui
+}
 
 /* Validaciones de los Campos */
 .ng-valid[required] {
