--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/traslado.comunicacion/traslado.comunicacion.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/traslado.comunicacion/traslado.comunicacion.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <!-- Datos Generales de los Usuarios -->
   <div class="row">
       <div class="col-xs-12 col-sm-7 col-md-9 col-sm-offset-2 col-md-offset-3">
@@ -237,7 +237,7 @@
 
         <!-- Columna para mostrar los Datos relalevantes de los Ingresos de Comunicaciones -->
         <div class="col-3">
-          <div class="card" style="width: 16rem; margin-top:5px">
+          <div class="card" style="width: 22rem; margin-top:5px">
             <!-- <img class="card-img-top" src="" alt="Card image cap"> -->
             <div class="card-block" style="margin-left:8px" >
               <h4 class="card-title">Resumen</h4>
