--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.resumido/reporte.resumido.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.resumido/reporte.resumido.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container-fluid">
   <!-- Titulo y Barra separadora -->
   <h2> {{ titulo }} <small> | SICDOC.</small></h2>
   <hr class="colorgraph">
