--- a/Angular_SICDOC/sicdoc/src/app/views/mantenimientos/solicitud.cambio.fecha/solicitud.cambio.fecha.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/mantenimientos/solicitud.cambio.fecha/solicitud.cambio.fecha.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
 <form #solicitudForm="ngForm" (ngSubmit)="onSubmit(solicitudForm)" name="solicitudForm" role="form">
     <h2> {{ titulo }} <small> | SICDOC.</small></h2>
 
