--- a/symfony/app/Resources/views/Emails/changePassWord.html.twig
+++ b/symfony/app/Resources/views/Emails/changePassWord.html.twig
@@ -18,18 +18,20 @@
             <h4> 
                 Saludos Cordiales.
             </h4>    
+
+            <hr class="my-4">
                 
              <p>
-                Nahúm Aaron Martínez Salgado
+                Para mayor Información contactar con: Nahúm Aaron Martínez Salgado
              </p>
              <p>
-                Administrador de la Plataforma de Gestión de la Cooperación (PGC)
+                Administrador del Sistema de Control de Documentación | SICDOC
              </p>
              <p>
                 Dirección de Cooperación Privada al Desarrollo | DCPD            
             </p>
             <p>
-                Secretaria de relaciones Exteriores de Honduras y Cooperación Internacional
+                Secretaría de relaciones Exteriores de Honduras y Cooperación Internacional
             </p>
         </div>
     </div>
