--- a/symfony/app/Resources/views/Emails/sendMailFuncionarioAnularComunicacion.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMailFuncionarioAnularComunicacion.html.twig
@@ -8,7 +8,7 @@
             font-family: Verdana, Arial, Helvetica, sans-serif;
             font-size:12px;
             text-align: left;
-            width: 600px;
+            width: 900px;
         }
 
         .tabla th {
@@ -88,7 +88,7 @@
                   </tr>
                   <tr>
                     <th>#</th>
-                    <th>Item</th>
+                    <th style="width: 200px;">Item</th>
                     <th>Descripcion</th>                    
                   </tr>                
                 
@@ -124,18 +124,20 @@
             <h4> 
                 Saludos Cordiales.
             </h4>    
+
+            <hr class="my-4">
                 
              <p>
-                Nahúm Aaron Martínez Salgado
+                Para mayor Información contactar con: Nahúm Aaron Martínez Salgado
              </p>
              <p>
-                Administrador de la Plataforma de Gestión de la Cooperación (PGC)
+                Administrador del Sistema de Control de Documentación | SICDOC
              </p>
              <p>
                 Dirección de Cooperación Privada al Desarrollo | DCPD            
             </p>
             <p>
-                Secretaria de relaciones Exteriores de Honduras y Cooperación Internacional
+                Secretaría de relaciones Exteriores de Honduras y Cooperación Internacional
             </p>
 
             <img src="secretaria_exterior.png" alt="SRECI" height="142" width="142">
