--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/editar.comunicacion/editar.comunicacion.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/editar.comunicacion/editar.comunicacion.component.css
@@ -14,6 +14,11 @@
   font-family: -system-ui
 }
 
+.container-fluid {
+  font-family: -system-ui
+}
+
+
 /* Validaciones de los Campos */
 .ng-valid[required] {
   border-left: 5px solid #42A948; /* green */
