--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container-fluid">
   <!-- Titulo y Barra separadora -->
   <h2> {{ titulo }} <small> | SICDOC.</small></h2>
   <hr class="colorgraph">
@@ -268,9 +268,9 @@
         <img src="assets/images/832.gif" alt="Cargando Tareas">
       </div>
       <!-- Boton para descargar todos los documentos de la Tabla -->
-      <button type="button" name="dowloadDocs" id="dowloadDocs" class="btn btn-success"
+      <!-- <button type="button" name="dowloadDocs" id="dowloadDocs" class="btn btn-success"
           (click)="dowloadDocs()">Descargar Documentos</button>
-      <br><br>
+      <br><br> -->
       <table class="table table-striped table-hover table-responsive" cellspacing="0" id="example" *ngIf="loading_tableIn == 'hide'">
         <thead>
           <tr>
@@ -278,13 +278,13 @@
             <th>Ingreso / Salida</th>
             <th>Tipo / Comunicación</th>
             <th>Código / Comunicación</th>
-            <th>COM. / Vinculante</th>
+            <th>Comunicación / Vinculante</th>
             <th>Direccion Responsable</th>
             <th>Funcionario Responsable</th>
             <th>Fecha Creación</th>
             <th>Fecha Entrega</th>
             <th>Fecha Finalizado</th>
-            <th>Institución Remitente</th>
+            <th>Institución de Comunicación</th>
             <th>Tema / Asunto</th>
             <th>Descripción / Comunicación</th>
             <th>Estado</th>
