--- a/Angular_SICDOC/sicdoc/src/app/components/login/modifica.usuario/modifica.usuario.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/login/modifica.usuario/modifica.usuario.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container-fluid">
   <!-- Datos Generales de los Usuarios -->
   <div class="row">
-      <div class="col-xs-12 col-sm-8 col-md-8">
+      <div class="col-xs-8 col-sm-8 col-md-8">
         <!-- Div que representan las Acciones al Ingresar un Usuario -->
         <div class="alert alert-success alert-dismissible fade show"  id="alertSuccess" role="alert" *ngIf="status == 'success'" >
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -157,8 +157,8 @@
 <!-- Fin de Contenedor -->
 
 <!-- Datos Generales de los Usuarios -->
-      <div class="col-4">
-        <img src="{{ urlComplete + identity.imagenUsuario }}" style="width:350px" alt="">
+      <div class="col-xs-4 col-md-4 col-lg-4">
+        <img src="{{ urlComplete + identity.imagenUsuario }}" style="width:450px" alt="">
       </div>
 
 </div>
