--- a/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
@@ -1,12 +1,12 @@
 
 <!-- Template de Login -->
-<div class="container animated fadeIn fast " style="margin-top:20px, margin-left:300px">
+<div class="container-fluid animated fadeIn fast " style="margin-top:20px, margin-left:300px">
   <!-- Loader de Carga de los Datos -->
   <div id="loader-2" *ngIf="loading == 'show'" style="margin-left:10%; margin-top:2%; margin-bottom:2%">
     <img src="assets/images/745.gif" alt="Cargando Tareas">
   </div>
 <div class="row" >
-    <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 col-sm-offset-2 col-md-offset-3">
+    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 col-sm-offset-2 col-md-offset-3">
 		<form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)" name="loginForm" role="form">
 			<fieldset>
 				<h2>{{ titulo }}</h2>
@@ -32,7 +32,7 @@
 				</span>
 				<hr class="colorgraph">
 				<div class="row">
-					<div class="col-xs-6 col-sm-6 col-md-6">
+					<div class="col-xs-8 col-sm-8 col-md-8 col-lg-4">
               <!-- <a class="btn btn-lg btn-success btn-block" [routerLink]="['index']">Ingresar</a> -->
               <input type="submit" class="btn btn-lg btn-success btn-block" value="Ingresar" ng-click="onSubmit()" >
 					</div>
