--- a/Angular_SICDOC/sicdoc/src/app/views/login/register.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/register.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
 <!-- Datos Generales de los Usuarios -->
 <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-9 col-sm-offset-2 col-md-offset-3">
@@ -243,10 +243,10 @@
 
 			<hr class="colorgraph">
 			<div class="row">
-				<div class="col-xs-12 col-md-6">
+				<div class="col-xs-12 col-md-2">
             <input type="submit" value="Registrarse" class="btn btn-primary btn-block btn-lg" tabindex="17" [disabled]="!registerForm.valid"  >
         </div>
-				<div class="col-xs-12 col-md-6">
+				<div class="col-xs-12 col-md-2">
             <a [routerLink]="['/login']" class="btn btn-success btn-block btn-lg"
                >Ingresar</a>
         </div>
