--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
 
   <h2> {{ titulo }} <small> | SICDOC.</small></h2>
   <hr class="colorgraph">
