--- a/Angular_SICDOC/sicdoc/src/app/views/shared/default.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/default.component.html
@@ -1,4 +1,4 @@
-<div class="container" >
+<div class="container-fluid" >
     <div class="col-md-12">
       <!-- <h1>{{ titulo }}</h1> -->
       <hr class="colorgraph">
