--- a/symfony/app/Resources/views/Emails/sendMailAsignacion.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMailAsignacion.html.twig
@@ -8,7 +8,7 @@
             font-family: Verdana, Arial, Helvetica, sans-serif;
             font-size:12px;
             text-align: left;
-            width: 600px;
+            width: 900px;
         }
 
         .tabla th {
@@ -83,23 +83,23 @@
                 
                   <tr>
                     <th>
-                      <th colspan="3">Informacion de la Comunicacion</th>
+                      <th colspan="3">Información de la Comunicación</th>
                     </th>
                   </tr>
                   <tr>
                     <th>#</th>
-                    <th>Item</th>
-                    <th>Descripcion</th>                    
+                    <th style="width: 200px;">Item</th>
+                    <th>Descripción</th>                    
                   </tr>                
                 
                   <tr class="modo1">
                     <th scope="row">1</th>
-                    <td>Codigo Externo</td>
+                    <td>Código Externo</td>
                     <td>{{ oficioExtNo }}</td>                    
                   </tr>
                   <tr class="modo1">
                     <th scope="row">2</th>
-                    <td>Codigo Interno</td>
+                    <td>Código Interno</td>
                     <td>{{ oficioInNo }}</td>                    
                   </tr>
                   <tr class="modo1">
@@ -114,7 +114,7 @@
                   </tr>
                   <tr class="modo1">
                     <th scope="row">6</th>
-                    <td>Instruccion</td>
+                    <td>Observaciones / Instrucciones</td>
                     <td>{{ instruccion }}</td>                    
                   </tr>
                   <tr class="modo1">
@@ -124,31 +124,32 @@
                   </tr>
                   <tr class="modo1">
                     <th scope="row">6</th>
-                    <td>Fecha Creacion</td>
+                    <td>Fecha Creación</td>
                     <td>{{ fechaMaxOfi }}</td>                    
-                  </tr>
-                                  
+                  </tr>                                  
             </table>
 
             <br>
             <h4> 
                 Saludos Cordiales.
             </h4>    
+
+            <hr class="my-4">
                 
              <p>
-                Nahúm Aaron Martínez Salgado
+                Para mayor Información contactar con: Nahúm Martínez
              </p>
              <p>
-                Administrador de la Plataforma de Gestión de la Cooperación (PGC)
+                Administrador del Sistema de Control de Documentación | SICDOC
              </p>
              <p>
                 Dirección de Cooperación Privada al Desarrollo | DCPD            
             </p>
             <p>
-                Secretaria de relaciones Exteriores de Honduras y Cooperación Internacional
+                Secretaría de relaciones Exteriores de Honduras y Cooperación Internacional
             </p>
 
-            <img src="secretaria_exterior.png" alt="SRECI" height="142" width="142">
+            <img src="{{ asset('src/secretaria_exterior.png') }}" alt="SRECI" style="width:50%; margin-left:25%" />
         </div>
     </div>
 </body>
